--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
     </nav>
 
     <section id="courses">
-        <h2>Kursus Populer</h2>
+        <h2>Bank Soal</h2>
         <div class="card">
-            <h3>Kursus Web Development</h3>
-            <p>Pelajari cara membuat website dari awal dengan HTML, CSS, dan JavaScript.</p>
-            <a href="#">Lihat Kursus</a>
+            <h3>Bahasa Indonesia</h3>
+            <p>Silahkan berlatih soal soal bahasa indonesia</p>
+            <a href="Bank Soal.html">Lihat Soal</a>
         </div>
         <div class="card">
             <h3>Kursus Pembelajaran Mesin</h3>
