--- a/Bank Soal 2.html
+++ b/Bank Soal 2.html
@@ -15,14 +15,14 @@
         }
 
         header {
-            background-image:url(backgroun\ atas.jpg);
-            color: rgb(0, 0, 0);
+            background-image:url(bcc.jpg);
+            color: white;
             text-align: center;
             padding: 20px;
         }
 
         nav {
-            background-color: #025613;
+            background-color: #070101;
             display: flex;
             justify-content: center;
             padding: 10px;
@@ -115,28 +115,22 @@
         <h1>Soal-soal Bahasa Indonesia</h1>
         <p>Soal Bahasa Indonesia untuk kelas 6 SD umumnya bertujuan untuk mengukur pemahaman siswa tentang berbagai aspek bahasa Indonesia, baik dalam keterampilan berbicara, membaca, menulis, maupun mendengarkan.</p>
     </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="#courses">Bank Soal</a>
-        
-        <a href="#resources">Sumber Belajar</a>
-        <a href="#contact"> Modul Ajar</a>
-    </nav>
-    <section id="courses">
-        <h2>Bank Soal Bahasa Indonesia</h2>
-        <div class="card">
-            <h3>Soal BAB 1</h3>
-            <a href="https://quizizz.com/embed/quiz/67465608157cac1f9a588468">Lihat Soal</a>
-        </div>
-        <div class="card">
-            <h3>Soal BAB 1</h3>
-            <a href="https://quizizz.com/embed/quiz/67465608157cac1f9a588468">Lihat Soal</a>
-        </div>
-        <div class="card">
-            <h3>Soal BAB 1</h3>
-            <a href="https://quizizz.com/embed/quiz/67465608157cac1f9a588468">Lihat Soal</a>
-        </div>
 
+    <section id="courses">
+        <h2>Bank Soal IPAS Kelas 6</h2>
+        <div class="card">
+            <h3>Soal BAB 1</h3>
+            <a href="https://quizizz.com/embed/quiz/67465608157cac1f9a588468">Lihat Soal</a>
+        </div>
+        <div class="card">
+            <h3>Soal BAB 1</h3>
+            <a href="https://quizizz.com/embed/quiz/67465608157cac1f9a588468">Lihat Soal</a>
+        </div>
+        <div class="card">
+            <h3>Soal BAB 1</h3>
+            <a href="https://quizizz.com/embed/quiz/67465608157cac1f9a588468">Lihat Soal</a>
+        </div>
+          
         <div class="card">
             <h3>Soal BAB 2</h3>
             <p>Kenali dasar-dasar AI dan pelajari cara menggunakan algoritma machine learning.</p>
