--- a/index.html
+++ b/index.html
@@ -221,32 +221,32 @@ h2 {
             <div class="card">
                 <h3>Bahasa Indonesia</h3>
                 <p>Silahkan berlatih soal-soal bahasa Indonesia.</p>
-                <a href="Bank Soal.html" class="cta-button">Lihat Soal</a>
+                <a href="Index Bank Soal B.Indo.html" class="cta-button">Lihat Soal</a>
             </div>
             <div class="card">
                 <h3>IPAS</h3>
                 <p>Silahkan berlatih soal-soal IPAS.</p>
-                <a href="Bank Soal 2.html" class="cta-button">Lihat soal</a>
+                <a href="Index Bank Soal IPAS.html" class="cta-button">Lihat soal</a>
             </div>
             <div class="card">
                 <h3>Matematika</h3>
                 <p>Silahkan berlatih soal-soal Matematika.</p>
-                <a href="Bank Soal 2.html" class="cta-button">Lihat soal</a>
+                <a href="Index Bank Soal MTK.html" class="cta-button">Lihat soal</a>
             </div>
             <div class="card">
                 <h3>Pancasila</h3>
                 <p>Silahkan berlatih soal-soal Pancasila.</p>
-                <a href="Bank Soal 2.html" class="cta-button">Lihat soal</a>
+                <a href="Index Bank Soal Pancasila.html" class="cta-button">Lihat soal</a>
             </div>
             <div class="card">
                 <h3>Seni</h3>
                 <p>Silahkan berlatih soal-soal Seni.</p>
-                <a href="Bank Soal 2.html" class="cta-button">Lihat soal</a>
+                <a href="Index Bank Soal Seni.html" class="cta-button">Lihat soal</a>
             </div>
             <div class="card">
                 <h3>Muatan Lokal</h3>
                 <p>Silahkan berlatih soal-soal Seni.</p>
-                <a href="Bank Soal 2.html" class="cta-button">Lihat soal</a>
+                <a href="Index Bank Soal Muatan Lokal.html" class="cta-button">Lihat soal</a>
                   
             </div>
         </div>
@@ -258,7 +258,7 @@ h2 {
             <div class="card">
                 <h3>Artikel Pembelajaran</h3>
                 <p>Baca artikel-artikel yang mengupas berbagai topik dalam dunia teknologi dan pembelajaran.</p>
-                <a href="#" class="cta-button">Baca Artikel</a>
+                <a href="Artikel 1.html" class="cta-button">Baca Artikel</a>
             </div>
             <div class="card">
                 <h3>Video Pembelajaran</h3>
