Update Index Bank Soal B.Indo.html

--- a/Index Bank Soal B.Indo.html
+++ b/Index Bank Soal B.Indo.html
@@ -140,7 +140,7 @@
                 <img src="Logoformatif.png" alt="Video 1">
                 <div class="content">
                     <h3>Asesmen Formatif</h3>
-                    <a href="Soal formatif B.Indonesia/Soal pertemuan 1.html" target="_blank">Lihat Soal</a>
+                    <a href="Soal pertemuan 1.html" target="_blank">Lihat Soal</a>
                 </div>
             </div>
             <!-- Video 2 -->
