--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <h3>Kelas 5</h3>
                 <p>Panduan belajar untuk siswa kelas 5 agar lebih siap ujian.</p>
             </a>
-            <a href="javascript:void(0)" onclick="openLoginModal('../kelas/kelas6.html')" class="feature">
+            <a href="javascript:void(0)" onclick="openLoginModal('kelas6.html')" class="feature">
                 <img src="jpg/6.jpg" alt="Prestasi">
                 <h3>Kelas 6</h3>
                 <p>Panduan belajar untuk siswa kelas 6 agar lebih siap ujian.</p>
