--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pembelajaran Bermakna</title>
-    <link rel="icon" href="JPG/favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="Javicon.jpg" type="image/x-icon">
     <style>
         /* Reset dan Pengaturan Dasar */
         * {
@@ -267,7 +267,7 @@
     <!-- Header -->
     <header class="header">
         <div>
-            <img src="Logo Logo/logosdn2krmgu.png" alt="Logo" class="logo">
+            <img src="logosdn2krmgu.png" alt="Logo" class="logo">
         </div>
         <div class="menu-icon" onclick="toggleMenu()">
             <div></div>
