--- a/index.html
+++ b/index.html
@@ -298,32 +298,32 @@
         <h2>Pilih Kelas</h2>
         <div class="feature-list">
             <a href="javascript:void(0)" onclick="openLoginModal('kelas1.html')" class="feature">
-                <img src="jpg/1.jpg" alt="Prestasi">
+                <img src="1.jpg" alt="Prestasi">
                 <h3>Kelas 1</h3>
                 <p>Latihan soal yang membantu siswa kelas 1.</p>
             </a>
             <a href="javascript:void(0)" onclick="openLoginModal('kelas2.html')" class="feature">
-                <img src="jpg/2.jpg" alt="Prestasi">
+                <img src="2.jpg" alt="Prestasi">
                 <h3>Kelas 2</h3>
                 <p>Latihan soal yang membantu siswa kelas 2.</p>
             </a>
             <a href="javascript:void(0)" onclick="openLoginModal('kelas3.html')" class="feature">
-                <img src="jpg/3.jpg" alt="Prestasi">
+                <img src="3.jpg" alt="Prestasi">
                 <h3>Kelas 3</h3>
                 <p>Latihan soal yang membantu siswa kelas 3.</p>
             </a>
             <a href="javascript:void(0)" onclick="openLoginModal('kelas4.html')" class="feature">
-                <img src="jpg/4.jpg" alt="Prestasi">
+                <img src="4.jpg" alt="Prestasi">
                 <h3>Kelas 4</h3>
                 <p>Panduan belajar untuk siswa kelas 4 agar lebih siap ujian.</p>
             </a>
             <a href="javascript:void(0)" onclick="openLoginModal('kelas5.html')" class="feature">
-                <img src="jpg/5.jpg" alt="Prestasi">
+                <img src="5.jpg" alt="Prestasi">
                 <h3>Kelas 5</h3>
                 <p>Panduan belajar untuk siswa kelas 5 agar lebih siap ujian.</p>
             </a>
             <a href="javascript:void(0)" onclick="openLoginModal('kelas6.html')" class="feature">
-                <img src="jpg/6.jpg" alt="Prestasi">
+                <img src="6.jpg" alt="Prestasi">
                 <h3>Kelas 6</h3>
                 <p>Panduan belajar untuk siswa kelas 6 agar lebih siap ujian.</p>
             </a>
