--- a/kelas6.html
+++ b/kelas6.html
@@ -21,7 +21,7 @@
 
         /* Header */
         header {
-            background: url('/JPG/bg7.jpg') no-repeat center/cover;
+            background: url('bg7.jpg') no-repeat center/cover;
             color: #000000;
             text-align: center;
             padding: 50px 20px;
