--- a/kelas6.html
+++ b/kelas6.html
@@ -197,7 +197,7 @@
     </header>
 
     <nav>
-        <a href="/indexpercobaan.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#courses">Bank Soal</a>
         <a href="#resources">Sumber Belajar</a>
         <a href="#contact">Modul Ajar</a>
