--- a/Video pembelajaran.html
+++ b/Video pembelajaran.html
@@ -89,6 +89,24 @@
             margin: 0;
             font-size: 0.9em;
         }
+        nav {
+            background-color: #025613;
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+        }
+
+        nav a {
+            color: rgb(255, 255, 255);
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+
+        nav a:hover {
+            background-color: #2980B9;
+        }
+
     </style>
 </head>
 <body>
@@ -98,6 +116,12 @@
     <p>Temukan berbagai video pembelajaran di bawah ini untuk masing-masing pelajaran.</p>
 </header>
 
+<nav>
+    <a href="index.html">Home</a>
+    <a href="#courses">Bank Soal</a>
+    <a href="#resources">Sumber Belajar</a>
+    <a href="#contact"> Modul Ajar</a>
+</nav>
 <div class="container">
 
     <!-- Kategori Bahasa Indonesia -->
