--- a/kelas6.html
+++ b/kelas6.html
@@ -168,6 +168,7 @@
             color: #fff;
             text-align: center;
             padding: 20px;
+            margin-top: auto; /* Dorong footer ke bawah */
         }
 
         footer p {
@@ -198,46 +199,43 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="#courses">Bank Soal</a>
-        <a href="#resources">Sumber Belajar</a>
-        <a href="#contact">Modul Ajar</a>
+        <a href="Bank Soal.html">Bank Soal</a>
+        <a href="#resources">Modul Ajar</a>
+        <a href="#resources">Video Pembelajaran</a>
+        <a href="#contact">Buku Digital</a>
+        <a href="#resources">Forum Diskusi</a>
+
     </nav>
 
     <section id="courses">
         <h2>Pasilitas Pembelajaran</h2>
         <div class="card-container">
             <div class="card">
-                <img src="banksoal.jpg" alt="Bank Soal">
+                <img src="banksoal.png" alt="Bank Soal">
                 <h3>Bank Soal</h3>
                 <p>Silahkan berlatih soal-soal dari berbagai mata pelajaran.</p>
-                <a href="Index Bank Soal B.Indo.html">Lihat Soal</a>
+                <a href="Bank Soal.html">Lihat Soal</a>
             </div>
             <div class="card">
-                <img src="sumberbelajar.jpg" alt="Sumber Belajar">
-                <h3>Sumber Belajar</h3>
+                <img src="modulajar.png" alt="Sumber Belajar">
+                <h3>Modul Ajar</h3>
                 <p>Silahkan Gunakan Sumber Belajar.</p>
                 <a href="Index Bank Soal IPAS.html">Lihat Soal</a>
             </div>
             <div class="card">
-                <img src="videopembelajaran.jpg" alt="Video Pembelajaran">
+                <img src="videopembelajaran.png" alt="Video Pembelajaran">
                 <h3>Video Pembelajaran</h3>
                 <p>Silahkan Menggunakan Video Pembelajaran.</p>
                 <a href="Index Bank Soal MTK.html">Lihat Soal</a>
             </div>
             <div class="card">
-                <img src="simulasi.jpg" alt="Simulasi Pembelajaran">
-                <h3>Simulasi Pembelajaran </h3>
-                <p>Silahkan Gunakan Berbagai Simulator/aplikasi Pembelajaran</p>
-                <a href="Index Bank Soal Pancasila.html">Lihat Soal</a>
-            </div>
-            <div class="card">
-                <img src="forumdiskusi.jpg" alt="Forum Diskusi">
+                <img src="forumdiskusi.png" alt="Forum Diskusi">
                 <h3>Forum Diskusi</h3>
                 <p>Silahkan Gunakan Forum ini Untuk Berdiskusi.</p>
                 <a href="Index Bank Soal Seni.html">Lihat Soal</a>
             </div>
             <div class="card">
-                <img src="buku.jpg" alt="Buku Digital">
+                <img src="bukudigital.png" alt="Buku Digital">
                 <h3>Buku Digital atau E-book</h3>
                 <p>Silahkan Menggali informasi dengan membaca.</p>
                 <a href="Index Bank Soal Muatan Lokal.html">Lihat Soal</a>
