--- a/B.Indonesia Sumatif.html
+++ b/B.Indonesia Sumatif.html
@@ -117,7 +117,7 @@
 </header>
 
 <nav>
-    <a href="index.html">Home</a>
+    <a href="in">Home</a>
     <a href="#courses">Bank Soal</a>
     <a href="#resources">Sumber Belajar</a>
     <a href="#contact"> Modul Ajar</a>
