--- a/forum diskusi.html
+++ b/forum diskusi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum Diskusi</title>
+    <title>Forum Diskusi Guru dan Siswa</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,16 +23,7 @@
             text-align: center;
             color: #333;
         }
-        .description {
-            text-align: center;
-            font-size: 1.2em;
-            color: #555;
-            margin-bottom: 20px;
-        }
-        .discussion-form {
-            margin-bottom: 20px;
-        }
-        .discussion-form input, .discussion-form textarea {
+        .discussion-form input, .discussion-form textarea, .discussion-form select {
             width: 100%;
             padding: 10px;
             margin: 10px 0;
@@ -52,17 +43,8 @@
         .discussion-form button:hover {
             background-color: #45a049;
         }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: #888;
-        }
         .comments {
             margin-top: 30px;
-            padding: 10px;
-            background-color: #f2f2f2;
-            border-radius: 4px;
         }
         .comment {
             padding: 10px;
@@ -70,27 +52,72 @@
             border: 1px solid #ddd;
             margin-bottom: 10px;
             border-radius: 4px;
+            position: relative;
+        }
+        .reply-button, .delete-button {
+            background-color: #2980b9;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            font-size: 0.9em;
+            border-radius: 4px;
+            cursor: pointer;
+            margin: 5px;
+        }
+        .delete-button {
+            background-color: #e74c3c;
+        }
+        .reply-button:hover {
+            background-color: #1f6390;
+        }
+        .delete-button:hover {
+            background-color: #c0392b;
+        }
+        .reply-form {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #f4f4f4;
+            border-radius: 4px;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #888;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Forum Diskusi Sederhana</h1>
-        <p class="description">Silakan tulis komentar atau pertanyaan Anda di bawah ini.</p>
+        <h1>Forum Diskusi Guru dan Siswa</h1>
+        <p class="description">Diskusikan pertanyaan dan jawaban di sini.</p>
 
-        <div class="discussion-form">
-            <form id="discussionForm">
+        <!-- Form login -->
+        <div id="loginForm" class="discussion-form">
+            <input type="text" id="loginName" placeholder="Masukkan nama" required>
+            <input type="password" id="loginPassword" placeholder="Masukkan password" required>
+            <button type="button" onclick="login()">Login</button>
+            <p id="loginError" style="color: red; display: none;">Nama atau password salah</p>
+        </div>
+
+        <!-- Forum setelah login -->
+        <div id="forumSection" style="display: none;">
+            <div class="discussion-form">
+                <select id="role">
+                    <option value="siswa">Siswa</option>
+                    <option value="guru">Guru</option>
+                </select>
                 <input type="text" id="name" placeholder="Nama Anda" required>
                 <textarea id="comment" placeholder="Tulis komentar Anda..." rows="4" required></textarea>
                 <button type="button" onclick="addComment()">Kirim Komentar</button>
-            </form>
-        </div>
+            </div>
 
-        <div class="comments">
-            <h3>Diskusi:</h3>
-            <div id="commentSection">
-                <!-- Komentar akan ditampilkan di sini -->
+            <div class="comments">
+                <h3>Diskusi:</h3>
+                <div id="commentSection">
+                    <!-- Komentar akan ditampilkan di sini -->
+                </div>
             </div>
         </div>
 
@@ -100,29 +127,157 @@
     </div>
 
     <script>
-        // Menambahkan komentar ke dalam halaman
-        function addComment() {
-            var name = document.getElementById('name').value;
-            var comment = document.getElementById('comment').value;
+        let comments = JSON.parse(localStorage.getItem('comments')) || [];
+        let currentUser = null;
 
-            // Validasi input
-            if (name.trim() === "" || comment.trim() === "") {
+        // Login function
+        function login() {
+            const name = document.getElementById('loginName').value.trim();
+            const password = document.getElementById('loginPassword').value.trim();
+
+            // Simulasi login (admin: guru, password: admin)
+            if (name === "admin" && password === "admin") {
+                currentUser = { name: "admin", role: "guru" };
+                localStorage.setItem('currentUser', JSON.stringify(currentUser));
+                showForum();
+            } else if (name !== "" && password !== "") {
+                currentUser = { name, role: "siswa" };
+                localStorage.setItem('currentUser', JSON.stringify(currentUser));
+                showForum();
+            } else {
+                document.getElementById('loginError').style.display = "block";
+            }
+        }
+
+        // Show forum section after login
+        function showForum() {
+            document.getElementById('loginForm').style.display = "none";
+            document.getElementById('forumSection').style.display = "block";
+            renderComments();
+        }
+
+        // Add a new comment or reply
+        function addComment(parentId = null, replyInput = null) {
+            const role = document.getElementById('role').value;
+            const name = document.getElementById('name').value.trim();
+            const commentText = parentId ? replyInput.value.trim() : document.getElementById('comment').value.trim();
+
+            if (!name || !commentText) {
                 alert("Nama dan komentar tidak boleh kosong!");
                 return;
             }
 
-            // Membuat elemen baru untuk komentar
-            var commentSection = document.getElementById('commentSection');
-            var newComment = document.createElement('div');
-            newComment.classList.add('comment');
-            newComment.innerHTML = "<strong>" + name + ":</strong><p>" + comment + "</p>";
+            const comment = {
+                id: Date.now(),
+                role,
+                name,
+                text: commentText,
+                parentId,
+                replies: [],
+            };
 
-            // Menambahkan komentar baru ke dalam bagian komentar
-            commentSection.appendChild(newComment);
+            if (parentId) {
+                const parentComment = findCommentById(comments, parentId);
+                parentComment.replies.push(comment);
+            } else {
+                comments.push(comment);
+            }
 
-            // Mengosongkan form input setelah pengiriman
-            document.getElementById('discussionForm').reset();
+            saveComments();
+            renderComments();
         }
+
+        // Delete comment by id (only admin)
+        function deleteComment(id) {
+            if (currentUser && currentUser.role === "guru") {
+                if (!confirm("Apakah Anda yakin ingin menghapus komentar ini?")) return;
+
+                comments = deleteCommentById(comments, id);
+                saveComments();
+                renderComments();
+            } else {
+                alert("Hanya admin yang dapat menghapus komentar!");
+            }
+        }
+
+        // Find a comment by ID
+        function findCommentById(commentList, id) {
+            for (const comment of commentList) {
+                if (comment.id === id) return comment;
+                const found = findCommentById(comment.replies, id);
+                if (found) return found;
+            }
+            return null;
+        }
+
+        // Delete comment and replies by ID
+        function deleteCommentById(commentList, id) {
+            return commentList.filter(comment => {
+                if (comment.id === id) return false;
+                comment.replies = deleteCommentById(comment.replies, id);
+                return true;
+            });
+        }
+
+        // Save comments to localStorage
+        function saveComments() {
+            localStorage.setItem('comments', JSON.stringify(comments));
+        }
+
+        // Render all comments
+        function renderComments() {
+            const commentSection = document.getElementById('commentSection');
+            commentSection.innerHTML = "";
+            comments.forEach(comment => renderComment(commentSection, comment));
+        }
+
+        // Render a single comment
+        function renderComment(container, comment) {
+            const commentDiv = document.createElement('div');
+            commentDiv.classList.add('comment');
+            commentDiv.innerHTML = `
+                <strong>${comment.name} (${comment.role}):</strong>
+                <p>${comment.text}</p>
+                <button class="reply-button" onclick="toggleReplyForm(${comment.id}, this)">Balas</button>
+                ${currentUser && currentUser.role === "guru" ? `<button class="delete-button" onclick="deleteComment(${comment.id})">Hapus</button>` : ""}
+                <div class="replies"></div>
+            `;
+
+            container.appendChild(commentDiv);
+
+            const repliesContainer = commentDiv.querySelector('.replies');
+            comment.replies.forEach(reply => renderComment(repliesContainer, reply));
+        }
+
+        // Toggle reply form
+        function toggleReplyForm(parentId, replyButton) {
+            const parentCommentDiv = replyButton.parentElement;
+            const existingForm = parentCommentDiv.querySelector('.reply-form');
+
+            if (existingForm) {
+                existingForm.remove();
+                return;
+            }
+
+            const replyForm = document.createElement('div');
+            replyForm.classList.add('reply-form');
+            replyForm.innerHTML = `
+                <textarea placeholder="Tulis balasan Anda..." rows="2"></textarea>
+                <button onclick="addComment(${parentId}, this.previousElementSibling)">Kirim Balasan</button>
+            `;
+
+            parentCommentDiv.appendChild(replyForm);
+        }
+
+        // Load current user from localStorage
+        window.onload = () => {
+            const storedUser = JSON.parse(localStorage.getItem('currentUser'));
+            if (storedUser) {
+                currentUser = storedUser;
+                showForum();
+            }
+        };
+
     </script>
 
 </body>
