--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pembelajaran Bermakna</title>
-    <link rel="icon" href="logodeeflearning.png" type="image/x-icon">
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <style>
         /* Reset dan Pengaturan Dasar */
         * {
