--- a/b.indo6.html
+++ b/b.indo6.html
@@ -116,6 +116,20 @@
         nav a:hover {
             background-color: #2980B9;
         }
+        /* Responsive Adjustments */
+@media (max-width: 600px) {
+    header h1 {
+        font-size: 1.5em;
+    }
+    header p {
+        font-size: 0.9em;
+    }
+    nav a {
+        padding: 8px 10px;
+        font-size: 0.9em;
+    }
+}
+
     </style>
 </head>
 <body>
