--- a/b.indo6.html
+++ b/b.indo6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank Soal</title>
+    <link rel="icon" href="dl.png" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -170,12 +171,21 @@
                     <a href="https://www.youtube.com/watch?v=exampleID2" target="_blank">Lihat Soal</a>
                 </div>
             </div>
+            <!-- Video Card 2 -->
+            <div class="video-card">
+                <img src="Logosumatif.png" alt="Video 2">
+                <div class="content">
+                    <h3>Remedial Asesmen Sumatif</h3>
+                    <a href="soal_indo_formatif_remedial.html" target="_blank">Lihat Soal</a>
+                </div>
+            </div>
             <!-- Video Card 3 -->
             <div class="video-card">
                 <img src="logosoal.png" alt="Video 3">
                 <div class="content">
                     <h3>Soal Latihan</h3>
                     <a href="https://www.youtube.com/watch?v=exampleID2" target="_blank">Lihat Soal</a>
+            
                 </div>
             </div>
         </div>
