--- a/kelas6.html
+++ b/kelas6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platform Belajar Bermakna</title>
+    <link rel="icon" href="dl.png" type="image/x-icon">
     <style>
         /* Reset dasar */
         * {
@@ -214,7 +215,7 @@
                 <img src="banksoal.png" alt="Bank Soal">
                 <h3>Bank Soal</h3>
                 <p>Silahkan berlatih soal-soal dari berbagai mata pelajaran.</p>
-                <a href="bank soal.html">Lihat Soal</a>
+                <a href="Bank Soal.html">Lihat Soal</a>
             </div>
             <div class="card">
                 <img src="modulajar.png" alt="Sumber Belajar">
