--- a/soal_indo_formatif_1.html
+++ b/soal_indo_formatif_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz SD Negeri 2 Karangmangu</title>
+    <link rel="icon" href="dl.png" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -127,7 +128,7 @@
 <body>
     <div class="container" id="quizContainer">
         <div class="header">
-            <img src="https://via.placeholder.com/100" alt="Logo Sekolah">
+            <img src="logosekolah.png" alt="Logo Sekolah">
             <div class="header-content">
                 <h1>SD Negeri 2 Karangmangu</h1>
                 <p>Jalan Desa Karangmangu</p>
@@ -561,16 +562,16 @@ function validateAndPrint() {
 
 function submitQuiz() {
     const correctAnswers = {
-    q1: "Unsur dalam cerita",
-    q2: "Dua jenis surat",
-    q3: "Pemeran utama cerita",
-    q4: "Pesan moral",
-    q5: "Latar tempat dan waktu",
-    q6: "Nama penulis",
-    q7: "Judul",
-    q8: "Tema cerita",
-    q9: "Surat resmi",
-    q10: "Informasi pribadi",
+    q1: "Inti cerita",
+    q2: "Berkomunikasi formal",
+    q3: "Protagonis",
+    q4: "Sahabat atau keluarga",
+    q5: "Menjelaskan waktu dan tempat",
+    q6: "Berisi pujian",
+    q7: "Menimbulkan konflik",
+    q8: "Hai Sahabatku",
+    q9: "Legenda",
+    q10: "Menggambarkan watak tokoh",
     q11: "Tanggal dan tempat",
     q12: "Fabel",
     q13: "Surat Resmi",
