--- a/B.Indo6beberapaFormatif.html
+++ b/B.Indo6beberapaFormatif.html
@@ -132,7 +132,7 @@
         <h2>SEMESTER 1</h2>
         <div class="menu-list">
             <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1</a></div>
-            <div class="menu-item"><a href="#">Formatif 2</a></div>
+            <div class="menu-item"><a href="SOAL SJT MOTIVASI DAN PEMBELAJARAN.html">Formatif 2</a></div>
             <div class="menu-item"><a href="#">Formatif 3</a></div>
             <div class="menu-item"><a href="#">Formatif 4</a></div>
             <div class="menu-item"><a href="#">Formatif 5</a></div>
