Update SOAL SJT MOTIVASI DAN PEMBELAJARAN.html

--- a/SOAL SJT MOTIVASI DAN PEMBELAJARAN.html
+++ b/SOAL SJT MOTIVASI DAN PEMBELAJARAN.html
@@ -141,7 +141,7 @@
       <div class="question">
         <p><strong>Soal 6:</strong> Seorang guru ingin membantu siswa mengasimilasi pengetahuan baru. Apa pendekatan terbaik yang bisa dilakukan berdasarkan teori Ausubel?</p>
         <ul>
-          <li><input type="radio" name="q6" value="5"><label>Menyusun peta konsep yang menghubungkan materi baru dengan pengetahuan siswa sebelumnya. (5 poin)</label></li>
+          <li><input type="radio" name="q6" value="5"><label>Menyusun peta konsep yang menghubungkan materi baru dengan pengetahuan siswa sebelumnya.</label></li>
           <li><input type="radio" name="q6" value="2"><label>Memberikan tugas dengan soal yang lebih kompleks tanpa penjelasan. </label></li>
           <li><input type="radio" name="q6" value="3"><label>Menghafalkan konsep-konsep penting sebelum masuk ke materi baru. </label></li>
           <li><input type="radio" name="q6" value="1"><label>Mengajarkan materi tanpa mengaitkannya dengan pengalaman sebelumnya. </label></li>
@@ -158,6 +158,41 @@
           <li><input type="radio" name="q7" value="5"><label>Membantu siswa memahami kekuatan dan kelemahan mereka sendiri. </label></li>
           <li><input type="radio" name="q7" value="3"><label>Mengarahkan siswa untuk membandingkan hasil mereka dengan siswa lain. </label></li>
           <li><input type="radio" name="q7" value="1"><label>Memastikan siswa menguasai hafalan materi sebelum evaluasi. </label></li>
+        </ul>
+      </div>
+
+      <div class="question">
+        <p><strong>Soal 8:</strong> Seorang siswa sering datang terlambat ke kelas. Sebagai guru, langkah apa yang sebaiknya dilakukan berdasarkan prinsip behavior modification?</p>
+        <ul>
+          <li><input type="radio" name="q8" value="5"><label>Memberikan penghargaan kecil setiap kali siswa datang tepat waktu.</label></li>
+          <li><input type="radio" name="q8" value="3"><label>Memanggil orang tua siswa untuk menegur perilakunya. </label></li>
+          <li><input type="radio" name="q8" value="2"><label>Mengurangi jam pelajaran siswa sebagai bentuk hukuman.</label></li>
+          <li><input type="radio" name="q8" value="4"><label>Membiarkan siswa belajar dari konsekuensi keterlambatannya. </label></li>
+          <li><input type="radio" name="q8" value="1"><label>Memberikan hukuman fisik agar siswa disiplin.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 9 -->
+      <div class="question">
+        <p><strong>Soal 9:</strong> Siswa Anda berhasil menyelesaikan proyek kelompok tepat waktu, tetapi kualitasnya kurang maksimal. Apa langkah terbaik untuk memperbaiki kinerja mereka di masa depan?</p>
+        <ul>
+          <li><input type="radio" name="q9" value="2"><label>Memberikan kritik tajam agar mereka meningkatkan kualitas proyek. </label></li>
+          <li><input type="radio" name="q9" value="5"><label>Memberikan pujian atas ketepatan waktu, tetapi memberikan saran untuk perbaikan. </label></li>
+          <li><input type="radio" name="q9" value="3"><label>Meminta mereka mengulang proyek tanpa memberikan panduan tambahan. </label></li>
+          <li><input type="radio" name="q9" value="1"><label>Mengabaikan hasil proyek untuk fokus pada tugas berikutnya. </label></li>
+          <li><input type="radio" name="q9" value="4"><label>Mengurangi nilai sebagai hukuman atas kualitas yang kurang baik. </label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 10 -->
+      <div class="question">
+        <p><strong>Soal 10:</strong> Siswa usia 11-12 tahun di kelas Anda sering menunjukkan minat terhadap topik abstrak seperti keadilan dan kebebasan. Apa strategi pembelajaran yang paling sesuai?</p>
+        <ul>
+          <li><input type="radio" name="q10" value="5"><label>Memberikan kesempatan untuk berdiskusi dan mengeksplorasi konsep-konsep abstrak. </label></li>
+          <li><input type="radio" name="q10" value="3"><label>Menggunakan alat bantu visual sederhana untuk menjelaskan topik. </label></li>
+          <li><input type="radio" name="q10" value="2"><label>Memberikan tugas hafalan untuk memperkuat pemahaman mereka.</label></li>
+          <li><input type="radio" name="q10" value="1"><label>Membatasi pembelajaran pada hal-hal konkret untuk menjaga fokus siswa. </label></li>
+          <li><input type="radio" name="q10" value="2"><label>Meminta siswa membaca materi sendiri tanpa pendampingan. </label></li>
         </ul>
       </div>
 
