Update SOAL SJT MOTIVASI DAN PEMBELAJARAN.html

--- a/SOAL SJT MOTIVASI DAN PEMBELAJARAN.html
+++ b/SOAL SJT MOTIVASI DAN PEMBELAJARAN.html
@@ -195,7 +195,126 @@
           <li><input type="radio" name="q10" value="2"><label>Meminta siswa membaca materi sendiri tanpa pendampingan. </label></li>
         </ul>
       </div>
+      
+         <!-- Soal 11 -->
+      <div class="question">
+        <p><strong>Soal 11:</strong> Seorang siswa mengalami kesulitan dalam memahami konsep matematika dasar. Sebagai guru, apa yang sebaiknya Anda lakukan?</p>
+        <ul>
+          <li><input type="radio" name="q11" value="5"><label>Memberikan penjelasan tambahan dan latihan soal dengan tingkat kesulitan yang sesuai.</label></li>
+          <li><input type="radio" name="q11" value="3"><label>Mengajarkan siswa menggunakan metode yang lebih sederhana dan langkah demi langkah.</label></li>
+          <li><input type="radio" name="q11" value="4"><label>Memberikan waktu ekstra untuk menyelesaikan latihan soal.</label></li>
+          <li><input type="radio" name="q11" value="2"><label>Memberikan soal latihan tanpa memberikan penjelasan lebih lanjut.</label></li>
+          <li><input type="radio" name="q11" value="1"><label>Meminta siswa belajar sendiri di rumah dengan bahan ajar yang tersedia.</label></li>
+        </ul>
+      </div>
 
+      <!-- Soal 12 -->
+      <div class="question">
+        <p><strong>Soal 12:</strong> Seorang siswa menunjukkan kemampuan luar biasa dalam bidang seni. Apa pendekatan terbaik untuk mengembangkan potensi ini?</p>
+        <ul>
+          <li><input type="radio" name="q12" value="5"><label>Memberikan kesempatan untuk mengikuti lomba seni atau proyek seni lebih lanjut.</label></li>
+          <li><input type="radio" name="q12" value="4"><label>Memberikan tugas yang lebih menantang di bidang seni untuk mengembangkan keterampilannya.</label></li>
+          <li><input type="radio" name="q12" value="3"><label>Mengizinkan siswa mengembangkan ide proyek seni mereka sendiri.</label></li>
+          <li><input type="radio" name="q12" value="2"><label>Membatasi kegiatan seni untuk siswa agar tidak mengganggu pembelajaran lain.</label></li>
+          <li><input type="radio" name="q12" value="1"><label>Memberikan penghargaan kecil setelah siswa menyelesaikan tugas seni.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 13 -->
+      <div class="question">
+        <p><strong>Soal 13:</strong> Dalam pembelajaran berbasis teknologi, Anda mendapati bahwa sebagian siswa kesulitan menggunakan aplikasi pembelajaran. Apa yang sebaiknya dilakukan?</p>
+        <ul>
+          <li><input type="radio" name="q13" value="5"><label>Memberikan pelatihan singkat atau tutorial mengenai penggunaan aplikasi tersebut.</label></li>
+          <li><input type="radio" name="q13" value="4"><label>Menyediakan panduan tertulis dan video tutorial untuk membantu siswa memahami aplikasi tersebut.</label></li>
+          <li><input type="radio" name="q13" value="3"><label>Memberikan bantuan individu kepada siswa yang kesulitan.</label></li>
+          <li><input type="radio" name="q13" value="2"><label>Memberikan waktu ekstra bagi siswa untuk belajar mandiri menggunakan aplikasi.</label></li>
+          <li><input type="radio" name="q13" value="1"><label>Mengabaikan kesulitan siswa dan melanjutkan pembelajaran dengan aplikasi.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 14 -->
+      <div class="question">
+        <p><strong>Soal 14:</strong> Seorang siswa menunjukkan minat besar terhadap pembelajaran sains. Sebagai guru, bagaimana Anda dapat memfasilitasi minat ini?</p>
+        <ul>
+          <li><input type="radio" name="q14" value="5"><label>Memberikan kesempatan untuk melakukan eksperimen dan penelitian mandiri.</label></li>
+          <li><input type="radio" name="q14" value="4"><label>Memberikan akses kepada siswa untuk membaca buku atau artikel sains yang lebih mendalam.</label></li>
+          <li><input type="radio" name="q14" value="3"><label>Mengundang ahli sains untuk berbicara dengan siswa tentang topik-topik menarik.</label></li>
+          <li><input type="radio" name="q14" value="2"><label>Memberikan tugas berkaitan dengan sains untuk menantang kemampuan siswa.</label></li>
+          <li><input type="radio" name="q14" value="1"><label>Membiarkan siswa belajar mandiri tanpa instruksi lebih lanjut.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 15 -->
+      <div class="question">
+        <p><strong>Soal 15:</strong> Seorang siswa menunjukkan kesulitan dalam memahami materi bahasa Inggris. Apa yang sebaiknya Anda lakukan?</p>
+        <ul>
+          <li><input type="radio" name="q15" value="5"><label>Memberikan latihan berulang dan kegiatan berbicara untuk memperkuat pemahaman siswa.</label></li>
+          <li><input type="radio" name="q15" value="4"><label>Menyesuaikan tingkat kesulitan materi agar sesuai dengan kemampuan siswa.</label></li>
+          <li><input type="radio" name="q15" value="3"><label>Memberikan materi tambahan yang lebih sederhana untuk meningkatkan pemahaman siswa.</label></li>
+          <li><input type="radio" name="q15" value="2"><label>Memberikan waktu lebih banyak untuk mempelajari materi bahasa Inggris secara mandiri.</label></li>
+          <li><input type="radio" name="q15" value="1"><label>Memberikan soal-soal latihan tanpa memberikan penjelasan tambahan.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 16 -->
+      <div class="question">
+        <p><strong>Soal 16:</strong> Seorang siswa sering merasa cemas saat ujian. Sebagai guru, apa yang dapat Anda lakukan untuk membantu mengurangi kecemasan tersebut?</p>
+        <ul>
+          <li><input type="radio" name="q16" value="5"><label>Memberikan latihan soal yang serupa dengan soal ujian agar siswa merasa lebih siap.</label></li>
+          <li><input type="radio" name="q16" value="4"><label>Mengajarkan teknik relaksasi dan manajemen stres untuk membantu siswa tetap tenang.</label></li>
+          <li><input type="radio" name="q16" value="3"><label>Memberikan ujian dalam format yang lebih familiar dengan gaya belajar siswa.</label></li>
+          <li><input type="radio" name="q16" value="2"><label>Menurunkan tingkat kesulitan ujian untuk mengurangi kecemasan siswa.</label></li>
+          <li><input type="radio" name="q16" value="1"><label>Mengabaikan kecemasan siswa dan tetap melaksanakan ujian seperti biasa.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 17 -->
+      <div class="question">
+        <p><strong>Soal 17:</strong> Seorang siswa lebih suka belajar dalam kelompok kecil daripada belajar secara individu. Sebagai guru, apa yang dapat Anda lakukan untuk mendukung gaya belajarnya?</p>
+        <ul>
+          <li><input type="radio" name="q17" value="5"><label>Memberikan kesempatan untuk bekerja dalam kelompok kecil dan mendiskusikan materi.</label></li>
+          <li><input type="radio" name="q17" value="4"><label>Memfasilitasi diskusi kelompok untuk memperdalam pemahaman materi.</label></li>
+          <li><input type="radio" name="q17" value="3"><label>Memberikan proyek kelompok untuk meningkatkan keterampilan kolaborasi.</label></li>
+          <li><input type="radio" name="q17" value="2"><label>Memberikan tugas individu namun dengan kesempatan untuk berdiskusi dengan teman-temannya.</label></li>
+          <li><input type="radio" name="q17" value="1"><label>Memberikan semua tugas secara individu tanpa adanya interaksi kelompok.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 18 -->
+      <div class="question">
+        <p><strong>Soal 18:</strong> Siswa Anda menunjukkan sikap apatis terhadap pelajaran sejarah. Apa yang bisa Anda lakukan untuk meningkatkan keterlibatannya?</p>
+        <ul>
+          <li><input type="radio" name="q18" value="5"><label>Menunjukkan hubungan antara materi sejarah dengan kehidupan sehari-hari siswa.</label></li>
+          <li><input type="radio" name="q18" value="4"><label>Memberikan kesempatan bagi siswa untuk mengeksplorasi topik sejarah yang mereka minati.</label></li>
+          <li><input type="radio" name="q18" value="3"><label>Menggunakan media visual seperti film dokumenter untuk membangkitkan minat siswa.</label></li>
+          <li><input type="radio" name="q18" value="2"><label>Memberikan materi sejarah dalam format yang lebih ringkas dan mudah dipahami.</label></li>
+          <li><input type="radio" name="q18" value="1"><label>Mengabaikan sikap apatis siswa dan terus mengajarkan materi secara konvensional.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 19 -->
+      <div class="question">
+        <p><strong>Soal 19:</strong> Seorang siswa menunjukkan kemampuan dalam menyelesaikan masalah matematika tingkat lanjut. Apa yang dapat Anda lakukan untuk mengembangkan potensi ini?</p>
+        <ul>
+          <li><input type="radio" name="q19" value="5"><label>Memberikan tantangan matematika yang lebih tinggi untuk memperdalam pemahamannya.</label></li>
+          <li><input type="radio" name="q19" value="4"><label>Memberikan akses kepada siswa untuk mengikuti kompetisi matematika atau kursus lanjutan.</label></li>
+          <li><input type="radio" name="q19" value="3"><label>Mengizinkan siswa mengeksplorasi topik matematika yang lebih luas dan mendalam.</label></li>
+          <li><input type="radio" name="q19" value="2"><label>Memberikan soal-soal matematika yang lebih rumit tetapi tanpa penjelasan lebih lanjut.</label></li>
+          <li><input type="radio" name="q19" value="1"><label>Membiarkan siswa belajar mandiri tanpa bimbingan lebih lanjut.</label></li>
+        </ul>
+      </div>
+
+      <!-- Soal 20 -->
+      <div class="question">
+        <p><strong>Soal 20:</strong> Dalam kelas yang memiliki beragam gaya belajar, apa yang paling efektif untuk mengakomodasi perbedaan tersebut?</p>
+        <ul>
+          <li><input type="radio" name="q20" value="5"><label>Memberikan variasi dalam metode pengajaran, termasuk penggunaan visual, audio, dan diskusi kelompok.</label></li>
+          <li><input type="radio" name="q20" value="4"><label>Memfasilitasi kegiatan yang memungkinkan siswa belajar dengan cara yang sesuai dengan gaya belajar mereka.</label></li>
+          <li><input type="radio" name="q20" value="3"><label>Menyesuaikan materi pelajaran dengan kebutuhan masing-masing siswa.</label></li>
+          <li><input type="radio" name="q20" value="2"><label>Memberikan instruksi yang lebih rinci dan jelas bagi siswa dengan gaya belajar tertentu.</label></li>
+          <li><input type="radio" name="q20" value="1"><label>Mengajarkan materi dengan cara yang sama kepada seluruh kelas tanpa mempertimbangkan gaya belajar.</label></li>
+        </ul>
+      </div>
       <button type="button" onclick="calculateResult()">Kirim Jawaban</button>
     </form>
 
