--- a/index.html
+++ b/index.html
@@ -12,14 +12,6 @@
             padding: 0;
             box-sizing: border-box;
         }
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #2193b0, #6dd5ed);
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
         a {
             text-decoration: none;
         }
@@ -115,7 +107,7 @@
         /* Hero Section */
         .hero {
             text-align: center;
-            padding: 380px 20px 350px; /* Mengurangi padding atas untuk menyeimbangkan */
+            padding: 350px 20px 750px; /* Mengurangi padding atas untuk menyeimbangkan */
             color: #fff;
         }
         .hero h1 {
@@ -173,7 +165,7 @@
         }
         .features .feature img {
             width: 100%;
-            height: 200px;
+            height: 250px;
             object-fit: cover;
             margin-bottom: 15px;
         }
@@ -263,6 +255,7 @@
         }
 
     </style>
+    
 </head>
 <body>
 
@@ -294,6 +287,64 @@
         </p>
         <button class="btn" onclick="scrollToSection()">Mulai Belajar Sekarang</button>
     </section>
+    <style>
+     /* Video Background */
+body {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
+
+.video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Video berada di belakang semua elemen */
+    overflow: hidden;
+}
+
+.video-background video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Menutupi layar penuh tanpa distorsi */
+}
+
+.content {
+    position: relative;
+    z-index: 1; /* Konten berada di atas video */
+    text-align: center;
+    padding: 50px 20px;
+    color: #fff; /* Warna teks agar kontras dengan video */
+}
+
+h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+    </style>
+</head>
+<body>
+    <!-- Video Background -->
+    <div class="video-background">
+        <video autoplay muted loop>
+            <source src="videobg.mp4" type="video/mp4">
+            Maaf, browser Anda tidak mendukung video.
+        </video>
+    </div>
 
     <!-- Fitur Section -->
     <section class="features" id="pilihKelas">
@@ -429,7 +480,7 @@ if (hashedUsername === validUsername && hashedPassword === validPasswordHash) {
     // Arahkan ke halaman tujuan setelah beberapa detik
     setTimeout(() => {
         window.location.href = page;  // Arahkan ke halaman kelas jika login sukses
-    }, 2000); // Tunggu 2 detik sebelum mengarahkan
+    }, ); // Tunggu 2 detik sebelum mengarahkan
 } else {
     // Tampilkan pesan kesalahan jika login gagal
     alert("Username atau password salah! Silakan coba lagi.");
@@ -441,11 +492,18 @@ if (hashedUsername === validUsername && hashedPassword === validPasswordHash) {
         const section = document.getElementById('pilihKelas');
         section.scrollIntoView({ behavior: 'smooth' });
     }
+    function toggleMenu() {
+    const menu = document.getElementById('dropdownMenu');
+    const menuIcon = document.querySelector('.menu-icon');
+    
+    menu.classList.toggle('open'); // Tambah/hapus kelas 'open' pada dropdown
+    menuIcon.classList.toggle('open'); // Tambah/hapus kelas 'open' pada ikon garis tiga
+}
+
 </script>
 
 
-
-    </script>
+ </script>
 
 </body>
 </html>
